Restore first release baseline